[gd_scene load_steps=7 format=2]

[ext_resource path="res://Stuff/Potions/ManaPotion.gd" type="Script" id=1]
[ext_resource path="res://Stuff/Potions/Mana Potion 1.png" type="Texture" id=2]
[ext_resource path="res://Stuff/Potions/Mana Potion 2.png" type="Texture" id=3]
[ext_resource path="res://Stuff/Potions/Mana Potion 3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "floating",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.97
height = 8.483

[node name="ManaPotion" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "floating"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.171, -0.265 )
shape = SubResource( 2 )
[connection signal="area_exited" from="." to="." method="_on_ManaPotion_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_ManaPotion_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ManaPotion_body_exited"]
